Eratosthène Sequentielle fonctionne